@@ -2,6 +2,9 @@ Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
 
+  [Backward Incompatible Changes]
+  - Tabs are now expanded.
+
 1.500     2013-11-22T15:05:31Z
 
     - Format url fragments (in links to perldoc sections)
